todo list complete

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>To Do List</title>
-
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
-
+<%- include("header") %>
     <div class="box" id="heading">
         <h1>
-            <%= typeOfDay %> %>
+            <%= listTitle %> %>
         </h1>
     </div>
 
@@ -29,15 +18,7 @@
 
                 <form class="item" action="/" method="post">
                     <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-                    <button class="btn btn-lg btn-warning" type="submit" name="button">+</button>
+                    <button class="btn btn-lg btn-warning" type="submit" name="list" value="<%= listTitle %>">+</button>
                 </form>
     </div>
-
-
-
-
-
-
-</body>
-
-</html>
+    <%- include("footer") %>
